--- a/templates/user.html
+++ b/templates/user.html
@@ -1,1 +1,7 @@
-<h1> Hello, {{name}}!</h1>
+{% extends "base.html" %}
+{% block title %}User{% endblock %}
+{% block page_content %}
+<div class="page-header">
+	<h1>Hello, {{ name }}!</h1>
+</div>
+{% endblock %}
